...
                strokeWidth={1.5}
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </Svg>
          ),
          tabBarButtonTestID: 'tab-settings',
        }}
      />
    </Tab.Navigator>
  );
};

...
